# ocr2md

./: .gitignore  README.md  main.py  pyproject.toml  rapid.py  rapid2.py  raw.py
